--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,7 @@ nav ul li a:hover, nav ul li a.active {
 #blogs .blogs-content .card img {
   width: 100%;
   border-radius: 5px 5px 0 0;
+  height: 220px;
 }
 #blogs .blogs-content .card .blog-body {
   padding: 10px 20px;
@@ -194,6 +195,25 @@ nav ul li a:hover, nav ul li a.active {
 }
 #blogs .blogs-content .card .blog-body .blog-text a {
   color: darkorange;
+}
+
+/* Blog page */
+#blog header h1 {
+  font-size: 2rem;
+  color: #333;
+}
+#blog hr {
+  margin: 20px 0;
+}
+#blog .blog-body h2 {
+  color: #444;
+}
+#blog .blog-body p {
+  color: #555;
+}
+pre {
+  border: 1px solid #ddd;
+  background-color: #f1f1f1;
 }
 
 /* footer */
